# desing-de-api

./: domain.py  manage.py  pyproject.toml  pytest.ini
apps/core/: api.py  domain.py  urls.py
apps/level1/: api.py  domain.py  framework.py  urls.py
apps/level2/: api.py  domain.py  framework.py  urls.py
apps/level2/framework/: __init__.py  decorators.py  http.py  middleware.py  serializers.py  tests.py
apps/level3/: api.py  domain.py  urls.py
apps/level3/framework/: __init__.py  decorators.py  middleware.py  tests.py
client/: __main__.py  core.py
client/tests/: test_placeorder.py
clientes/client_level0/: __main__.py
clientes/client_level0/tests/: test_placeorder.py
clientes/client_level1/: __main__.py  cli.py
clientes/client_level1/tests/: test_client.py
desing_api/: settings.py  urls.py  wsgi.py
desingn_api/: settings.py  urls.py  wsgi.py
tests/: coffeeclient.py  conftest.py  conftest_level2.py  politica.py  sqs.py  test_api_create.py  test_api_read.py
tests/level1/: test_api_create.py  test_api_delete.py  test_api_update.py
tests/level2/: test_api_create.py  test_api_update.py
tests/level3/: test_api_create.py  test_api_delete.py  test_api_update.py
