[tool.poetry]
name = "desing-de-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
coopy = "^0.3.1"
requests = "^2.26.0"
pytest-mock = "^3.6.1"
pytest-django = "^4.4.0"
isort = "^5.9.3"
httpretty = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
